update name to reflect it's a boilerplate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-flextable",
+  "name": "react-typescript-library",
   "version": "0.1.0",
   "private": true,
   "dependencies": {},
